Automatically configure Prometheus datasource
* Bump container version to master to get [1789](https://github.com/grafana/grafana/issues/1789)
* Mount config files directly into container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,15 @@ services:
       - node-exporter
 
   grafana:
-    image: "grafana/grafana:4.6.2"
+    image: "grafana/grafana:master"
     ports:
       - "3000:3000"
     networks:
       - metrics
     volumes:
         - grafana-data:/var/lib/grafana
+        - ./grafana.ini:/etc/grafana/grafana.ini
+        - ./datasources.yml:/etc/grafana/datasources.yml
     depends_on:
       - prometheus
 
