--- a/grafana.ini
+++ b/grafana.ini
@@ -23,6 +23,7 @@
 #
 ;plugins = /var/lib/grafana/plugins
 
+datasources = /etc/grafana/datasources.yml
 #
 #################################### Server ####################################
 [server]
