--- a/grafana.ini
+++ b/grafana.ini
@@ -12,19 +12,17 @@
 #################################### Paths ####################################
 [paths]
 # Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
-#
 ;data = /var/lib/grafana
-#
+
 # Directory where grafana can store logs
-#
 ;logs = /var/log/grafana
-#
+
 # Directory where grafana will automatically scan and look for plugins
-#
 ;plugins = /var/lib/grafana/plugins
 
-datasources = /etc/grafana/datasources.yml
-#
+# Config files containing datasources that will be configured at startup
+;datasources = conf/datasources
+
 #################################### Server ####################################
 [server]
 # Protocol (http, https, socket)
@@ -92,6 +90,8 @@ datasources = /etc/grafana/datasources.yml
 # Max conn setting default is 0 (mean not set)
 ;max_open_conn =
 
+# Set to true to log the sql calls and execution times.
+log_queries =
 
 #################################### Session ####################################
 [session]
@@ -162,6 +162,7 @@ datasources = /etc/grafana/datasources.yml
 # data source proxy whitelist (ip_or_domain:port separated by spaces)
 ;data_source_proxy_whitelist =
 
+#################################### Snapshots ###########################
 [snapshots]
 # snapshot sharing options
 ;external_enabled = true
@@ -174,7 +175,12 @@ datasources = /etc/grafana/datasources.yml
 # remove snapshots after 90 days
 ;snapshot_TTL_days = 90
 
-#################################### Users ####################################
+#################################### Dashboards History ##################
+[dashboards]
+# Number dashboard versions to keep (per dashboard). Default: 20, Minimum: 1
+;versions_to_keep = 20
+
+#################################### Users ###############################
 [users]
 # disable user signup / registration
 ;allow_sign_up = true
@@ -361,12 +367,6 @@ datasources = /etc/grafana/datasources.yml
 ;tag =
 
 
-#################################### AMQP Event Publisher ##########################
-[event_publisher]
-;enabled = false
-;rabbitmq_url = amqp://localhost/
-;exchange = grafana_events
-
 ;#################################### Dashboard JSON files ##########################
 [dashboards.json]
 ;enabled = false
@@ -380,7 +380,7 @@ datasources = /etc/grafana/datasources.yml
 ;execute_alerts = true
 
 #################################### Internal Grafana Metrics ##########################
-# Metrics available at HTTP API Url /api/metrics
+# Metrics available at HTTP API Url /metrics
 [metrics]
 # Disable / Enable internal metrics
 ;enabled           = true
@@ -438,3 +438,4 @@ datasources = /etc/grafana/datasources.yml
 [external_image_storage.gcs]
 ;key_file =
 ;bucket =
+;path =
