Configure the datasources file/config correctly

--- a/grafana.ini
+++ b/grafana.ini
@@ -21,7 +21,7 @@
 ;plugins = /var/lib/grafana/plugins
 
 # Config files containing datasources that will be configured at startup
-;datasources = conf/datasources
+datasources = conf/datasources
 
 #################################### Server ####################################
 [server]
